...
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Let's join a room!"
        android:id="@+id/textView"
        android:textAlignment="center" />

    <AutoCompleteTextView
        android:id="@+id/room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_room_name"
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/join_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="attemptJoin"
        android:text="@string/action_join"
...
