...
    android:layout_height="fill_parent"
    
    tools:context=".MainActivity">
    
    
    <Button
    android:id="@+id/close"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="Close"
    android:text = "Quit Room"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
...
